Noise seems to break / negate pre-roll on smoke sim #72214

Closed
opened 2019-12-06 03:21:09 +01:00 by Mark Spink · 24 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.82 (sub 1), branch: fluid-mantaflow, commit date: 2019-11-26 22:21, hash: 0ca44974c9
Worked: (optional)

Short description of error
[adding noise to a smoke sim seems to break / ignore / negate any pre-roll frames you have set.
Like this-
NoiseBreaksPreRoll.mp4
Here is the same sim with & without noise. The sim was set to start at frame -65 in the cache settings, then I changed it to -100 as I initially thought that I just needed more pre-roll, but nothing changed.
As you can see in the left hand image, the smoke is showing top to bottom, the reason I used a pre-roll. While with noise it developes from the bottom up as if no pre-roll were used.
I observed the playhead while baking the noise, and it went through the frames from -100 - 0 very quickly, stayed on frame 0 for quite a pause, then went through from frame 1 - 250 at a more normal speed (as if it were actually doing something).
This sim was originally baked using adaptive domain, but when noise was added it still behaves with the issue in #69870, the smoke jumped position several times during the animation after noise was added.]

Exact steps for others to reproduce the error
[Bake the attached and observe...]
[Based on the default startup or an attached .blend file (as simple as possible){F8192972}]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.82 (sub 1), branch: fluid-mantaflow, commit date: 2019-11-26 22:21, hash: `0ca44974c9` Worked: (optional) **Short description of error** [adding noise to a smoke sim seems to break / ignore / negate any pre-roll frames you have set. Like this- [NoiseBreaksPreRoll.mp4](https://archive.blender.org/developer/F8192969/NoiseBreaksPreRoll.mp4) Here is the same sim with & without noise. The sim was set to start at frame -65 in the cache settings, then I changed it to -100 as I initially thought that I just needed more pre-roll, but nothing changed. As you can see in the left hand image, the smoke is showing top to bottom, the reason I used a pre-roll. While with noise it developes from the bottom up as if no pre-roll were used. I observed the playhead while baking the noise, and it went through the frames from -100 - 0 very quickly, stayed on frame 0 for quite a pause, then went through from frame 1 - 250 at a more normal speed (as if it were actually doing something). This sim was originally baked using adaptive domain, but when noise was added it still behaves with the issue in #69870, the smoke jumped position several times during the animation after noise was added.] **Exact steps for others to reproduce the error** [Bake the attached and observe...] [Based on the default startup or an attached .blend file (as simple as possible){[F8192972](https://archive.blender.org/developer/F8192972/NoiseBreaksPreRoll.blend)}]
Author

Added subscriber: @marks-4

Added subscriber: @marks-4

Added subscriber: @mano-wii

Added subscriber: @mano-wii

If I'm not mistaken, negative frames never worked before.
This is a known limitation not only with smoke simulation, but particulate system, clothing and other physics.

But I may be wrong.

If I'm not mistaken, negative frames never worked before. This is a known limitation not only with smoke simulation, but particulate system, clothing and other physics. But I may be wrong.
Author

Worked in the old smoke sim, still does in Mantaflow, but breaks when noise added.
Here you go-
OldSmokePrerollHiRez.mp4
So basically the original Mantaflow blend file from above, loaded into V2.81 Vanilla release, and smoke re-added to the domain, emitter (sphere) & Ground.
Then baked with no pre-roll (Simulation Start 1 in Cache), then again with pre-roll (Simulation Start -80 in Cache), then with pre-roll and HiRez (assuming HiRez to be the equivalent of 'noise' in Mantaflow Smoke).

So Both systems, old & Mantaflow, use the pre-roll for the smoke sim, but Mantaflow breaks/negates the pre-roll when noise is added to the smoke.

Here's the .blend
OldSmokePreRoll.blend

Worked in the old smoke sim, still does in Mantaflow, but breaks when noise added. Here you go- [OldSmokePrerollHiRez.mp4](https://archive.blender.org/developer/F8214479/OldSmokePrerollHiRez.mp4) So basically the original Mantaflow blend file from above, loaded into V2.81 Vanilla release, and smoke re-added to the domain, emitter (sphere) & Ground. Then baked with no pre-roll (Simulation Start 1 in Cache), then again with pre-roll (Simulation Start -80 in Cache), then with pre-roll and HiRez (assuming HiRez to be the equivalent of 'noise' in Mantaflow Smoke). So Both systems, old & Mantaflow, use the pre-roll for the smoke sim, but Mantaflow breaks/negates the pre-roll when noise is added to the smoke. Here's the .blend [OldSmokePreRoll.blend](https://archive.blender.org/developer/F8214498/OldSmokePreRoll.blend)
Sebastián Barschkis was assigned by Germano Cavalcante 2019-12-16 17:52:07 +01:00
Author

Hello All

Just FYI; I tried the scene in the new 16-12-2019 build and noise still negates any pre-roll in the smoke sim after re-adding Mantaflow to the relevent objects.
SmokePreroll_16-12-19-Build.mp4
Here's the blend file-
NoiseBreaksPreRoll_16-12.blend

Hello All Just FYI; I tried the scene in the new 16-12-2019 build and noise still negates any pre-roll in the smoke sim after re-adding Mantaflow to the relevent objects. [SmokePreroll_16-12-19-Build.mp4](https://archive.blender.org/developer/F8238497/SmokePreroll_16-12-19-Build.mp4) Here's the blend file- [NoiseBreaksPreRoll_16-12.blend](https://archive.blender.org/developer/F8238499/NoiseBreaksPreRoll_16-12.blend)

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Sebastián Barschkis was unassigned by Germano Cavalcante 2020-01-15 13:59:11 +01:00

Added subscriber: @sebbas

Added subscriber: @sebbas

Could you edit the report description, update the file and briefly describe how to reproduce the problem?
I tried to reproduce the problem, but it consumes a lot of time.
Maybe it is even better to create another report.

Could you edit the report description, update the file and briefly describe how to reproduce the problem? I tried to reproduce the problem, but it consumes a lot of time. Maybe it is even better to create another report.
Author

Here you go-
2020-01-16 13-39-51.mp4

And here's the simple .blend-
NoiseBreaksPreRollSimple.blend

You can try to increase the preroll to say -75 as the start frame in the cache field and you will get the same result. You can even see the playhead when you bake the noise; it starts from frame 1 (or maybe 0), definitely not where the cache has been set to start from.

I'm using this version in the above clip & .blend-
2.82Version.JPG

Here you go- [2020-01-16 13-39-51.mp4](https://archive.blender.org/developer/F8281012/2020-01-16_13-39-51.mp4) And here's the simple .blend- [NoiseBreaksPreRollSimple.blend](https://archive.blender.org/developer/F8281013/NoiseBreaksPreRollSimple.blend) You can try to increase the preroll to say -75 as the start frame in the cache field and you will get the same result. You can even see the playhead when you bake the noise; it starts from frame 1 (or maybe 0), definitely not where the cache has been set to start from. I'm using this version in the above clip & .blend- ![2.82Version.JPG](https://archive.blender.org/developer/F8281016/2.82Version.JPG)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @TedSchundler

Added subscriber: @TedSchundler
Author

Thanks Ted! What does that token actually mean though?...

Thanks Ted! *What does that token actually mean though?...*
Author

This still happens in version: 2.82 (sub 6), branch: master, commit date: 2020-01-23 15:59, hash: 517870a4a1 I'm afraid-
SmokeTwitch_Twister.mp4

Here's the scene file as used in the above-
SandTwister.blend

This still happens in version: 2.82 (sub 6), branch: master, commit date: 2020-01-23 15:59, hash: `517870a4a1` I'm afraid- [SmokeTwitch_Twister.mp4](https://archive.blender.org/developer/F8299678/SmokeTwitch_Twister.mp4) Here's the scene file as used in the above- [SandTwister.blend](https://archive.blender.org/developer/F8299671/SandTwister.blend)
Author

Hello. this issue still exists in the Feb 3rd Build.
PreRoll_With-WithoutNoise_Feb3rd-Build.jpg

Hello. this issue still exists in the Feb 3rd Build. ![PreRoll_With-WithoutNoise_Feb3rd-Build.jpg](https://archive.blender.org/developer/F8318343/PreRoll_With-WithoutNoise_Feb3rd-Build.jpg)
Author

Hello. this issue still exists in the Feb 4th Build.
PreRoll_With-WithoutNoise_Feb4th-Build.jpg

Still happens with the 'simple' blend file uploaded above as well-
2020-02-05 00-56-47.mp4

Hello. this issue still exists in the Feb 4th Build. ![PreRoll_With-WithoutNoise_Feb4th-Build.jpg](https://archive.blender.org/developer/F8320801/PreRoll_With-WithoutNoise_Feb4th-Build.jpg) Still happens with the 'simple' blend file uploaded above as well- [2020-02-05 00-56-47.mp4](https://archive.blender.org/developer/F8320810/2020-02-05_00-56-47.mp4)
Author

Hello, this still happens in the 2.82 release build-
PreRoll_WithoutNoise_2.82-release-Build.JPG
PreRoll_WithNoise_2.82-release-Build.JPG

Here's the 'simple' blend again-
NoiseBreaksPreRollSimple.blend

Just bake it, then bake the noise and enable/disable the noise (obviously move the playhead to refresh the viewport if you're using cycles, not necessary in 'solid' view, or Lookdev/Eevee- not sure if this is a separate bug or a feature?!?)

@sebbas same question, for the same reasons as in #73232: assuming the 2.82 release build is effectively static, if this is the case- is there any way of knowing when the 2.83 alpha/beta build has been changed WRT Mantaflow?

Hello, this still happens in the 2.82 release build- ![PreRoll_WithoutNoise_2.82-release-Build.JPG](https://archive.blender.org/developer/F8342516/PreRoll_WithoutNoise_2.82-release-Build.JPG) ![PreRoll_WithNoise_2.82-release-Build.JPG](https://archive.blender.org/developer/F8342518/PreRoll_WithNoise_2.82-release-Build.JPG) Here's the 'simple' blend again- [NoiseBreaksPreRollSimple.blend](https://archive.blender.org/developer/F8342520/NoiseBreaksPreRollSimple.blend) Just bake it, then bake the noise and enable/disable the noise (obviously move the playhead to refresh the viewport if you're using cycles, not necessary in 'solid' view, or Lookdev/Eevee- not sure if this is a separate bug or a feature?!?) @sebbas same question, for the same reasons as in #73232: assuming the 2.82 release build is effectively static, if this is the case- is there any way of knowing when the 2.83 alpha/beta build has been changed WRT Mantaflow?
Author

Hello, this still happens in the Feb 18 build of 2.83alpha 2.83Version.JPG
2020-02-19 19-06-51.mp4

Hello, this still happens in the Feb 18 build of 2.83alpha ![2.83Version.JPG](https://archive.blender.org/developer/F8349889/2.83Version.JPG) [2020-02-19 19-06-51.mp4](https://archive.blender.org/developer/F8349888/2020-02-19_19-06-51.mp4)
Author

Hello, this still happens in the Feb21 build-
Without Noise:
WithoutNoise.JPG

With Noise:
WithNoise.JPG

This build-
V2.83.JPG

I also get a lot (most times I try in fact) of crash-on-load crashes in this build, trying to load previous build Mantaflow scenes. I had to append all the objects into a new scene to actually load the scene in #74062, I could not load the scene without an instant crash. It loaded fine into the previous build.

Hello, this still happens in the Feb21 build- Without Noise: ![WithoutNoise.JPG](https://archive.blender.org/developer/F8363615/WithoutNoise.JPG) With Noise: ![WithNoise.JPG](https://archive.blender.org/developer/F8363617/WithNoise.JPG) This build- ![V2.83.JPG](https://archive.blender.org/developer/F8363619/V2.83.JPG) I also get a lot (most times I try in fact) of crash-on-load crashes in this build, trying to load previous build Mantaflow scenes. I had to append all the objects into a new scene to actually load the scene in #74062, I could not load the scene without an instant crash. It loaded fine into the previous build.
Author

Hello, this still seems to be an issue with the March 2nd 2.83 build, but there now seem to be bigger issues in general with this build:

2020-03-03 11-40-03.mp4

The sim seems to fall apart badly both with and without noise, soon after the start, I've baked and re-baked it several times, and the bigger issue persists.

Interestingly, it looks like #73232 has been fixed (from what I can see) in this (Feb 3rd) build, but with some new issues of it's own.
Both this and the #73232 scene were quite crashy in this build, on playback mostly, although #73232 crashed as soon as I tried to 'free data' on one of the domains (shall report in #73232).

Here's the same file re-baked in 2.82 release for comparison-

2020-03-03 11-47-05.mp4

Hello, this still seems to be an issue with the March 2nd 2.83 build, but there now seem to be bigger issues in general with this build: [2020-03-03 11-40-03.mp4](https://archive.blender.org/developer/F8384315/2020-03-03_11-40-03.mp4) The sim seems to fall apart badly both with and without noise, soon after the start, I've baked and re-baked it several times, and the bigger issue persists. Interestingly, it looks like #73232 has been fixed (from what I can see) in this (Feb 3rd) build, but with some new issues of it's own. Both this and the #73232 scene were quite crashy in this build, on playback mostly, although #73232 crashed as soon as I tried to 'free data' on one of the domains (shall report in #73232). Here's the same file re-baked in 2.82 release for comparison- [2020-03-03 11-47-05.mp4](https://archive.blender.org/developer/F8384317/2020-03-03_11-47-05.mp4)
Author

Hello all; I tried the above file in 2.83 release version and 2.9 Alpha (version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: ec776f18ff).
In 2.83 it behaves the same as my previous test.
In 2.9 Alpha baking the noise makes the smoke completely disappear, as shown below-

Noise_Still_Breaks_PreRoll.mp4

Hello all; I tried the above file in 2.83 release version and 2.9 Alpha (version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: `ec776f18ff`). In 2.83 it behaves the same as my previous test. In 2.9 Alpha baking the noise makes the smoke completely disappear, as shown below- [Noise_Still_Breaks_PreRoll.mp4](https://archive.blender.org/developer/F8641947/Noise_Still_Breaks_PreRoll.mp4)

This issue was referenced by 1e255ce031

This issue was referenced by 1e255ce0319d6cf45b6951a2a87590d2ca236e9f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-07-03 15:28:22 +02:00

Added subscriber: @bowserlm

Added subscriber: @bowserlm

Seeing this marked as resolved but I'm seeing the same behavior here on 2.9 beta. Baking noise makes sim completely go away.

Seeing this marked as resolved but I'm seeing the same behavior here on 2.9 beta. Baking noise makes sim completely go away.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72214
No description provided.